--- a/textview/src/main/res/layout/activity_main.xml
+++ b/textview/src/main/res/layout/activity_main.xml
@@ -3,23 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.xiong.textview.MainActivity">
 
-    <com.xiong.textview.widget.VerticalRollingTextView
-        android:id="@+id/tv"
-        android:text="Hello World!"
-        android:layout_width="100dp"
-        android:layout_height="40dp" />
+    <LinearLayout
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:text="Start"
-        android:id="@+id/btn1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:text="RESET"
-        android:id="@+id/btn2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <com.xiong.textview.widget.VerticalRollingTextView
+            android:id="@+id/tv"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:background="#ff0000"
+            android:text="Hello World!" />
+
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:textSize="26px"
+            android:textColor="#ffffff"
+            android:gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:background="#ff0000"
+            android:text="Hello World!" />
+
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="RESET" />
+
+    </LinearLayout>
+
+    <TextView
+        android:textSize="26px"
+        android:textColor="#ffffff"
+        android:gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:background="#ff0000"
+        android:text="?" />
 </LinearLayout>
