--- a/textview/src/main/res/layout/activity_main.xml
+++ b/textview/src/main/res/layout/activity_main.xml
@@ -49,5 +49,10 @@
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:background="#ff0000"
-        android:text="?" />
+        android:text="\?" />
+
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
