--- a/rv/src/main/res/layout/activity_main2.xml
+++ b/rv/src/main/res/layout/activity_main2.xml
@@ -10,11 +10,17 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
     <Button
+        android:visibility="gone"
         android:id="@+id/button"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
