--- a/rv/src/main/res/layout/item_rv.xml
+++ b/rv/src/main/res/layout/item_rv.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="wrap_content"
     android:gravity="center">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/item_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        tools:itemCount="5"
+        tools:listitem="@layout/recycler_view_item" />
 
 </LinearLayout>
